overflow issue

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -77,6 +77,7 @@ $carousel-dark-control-icon-filter: invert(1) grayscale(100) !default;
 
 html,
 body {
+  min-width: 100% !important;
   max-width: 100% !important;
   overflow-x: hidden !important;
 }
